Add author in toml file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "base-sequence-compression"
 version = "0.1.0"
+authors = ["Marshall Ku <marshall@kakao.com>"]
 edition = "2021"
 
 [dependencies]
