--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,13 @@ jobs:
             - uses: actions-rust-lang/setup-rust-toolchain@v1
             - run: cargo install wasm-pack
             - run: wasm-pack build --target web
+    bench:
+        name: Benchmark project
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - uses: actions-rust-lang/setup-rust-toolchain@v1
+            - run: cargo bench
     send-notification:
         needs: [build, test, build-wasm]
         if: ${{ failure() }}
