--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,13 @@ crate-type = ["cdylib", "rlib"]
 flate2 = "1.0.35"
 wasm-bindgen = "0.2.99"
 
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["File", "Blob"] }
 js-sys = "0.3"
+
+[[bench]]
+name = "main"
+harness = false
